--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-.idea/
+.idea
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
@@ -172,3 +172,4 @@ vignettes/*.pdf
 
 standford/
 .idea/inspectionProfiles/
+
